k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthin-api
  namespace: healthin
  labels:
    app: healthin-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: healthin-api
  template:
    metadata:
      labels:
        app: healthin-api
    spec:
      containers:
        - name: healthin-api
          image: harbor.adrinerdp.co/healthin/healthin-api:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: healthin-api
  namespace: healthin
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: healthin-api
