k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthin-server-ingress
  namespace: healthin
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: api.be-healthy.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: healthin-server
                port:
                  number: 3000
